--- a/Snake.html
+++ b/Snake.html
@@ -8,12 +8,15 @@
       {
         text-align: center;
         background-color: rgb(0,0,0);
+        color: rgb(255,255,255);
       }
     </style>
   </head>
   <body>
     <canvas id="canvas" width=645 height=420 <!-- lol 420 -->></canvas>
     <script type="text/javascript" src="snake.js"></script>
-    <h2 id="scoreLabel" style="color: rgb(255,255,255)">Your score is: <h2>
+    <h2 id="scoreLabel">Your score is: <h2>
+    <h2 id="highLabel">Your Highscore is: <h2>
+    <h4>Made By Jackson</h4>
   </body>
 </html>
