--- a/Snake.html
+++ b/Snake.html
@@ -18,5 +18,11 @@
     <h2 id="scoreLabel">Your score is: <h2>
     <h2 id="highLabel">Your Highscore is: <h2>
     <h4>Made By Jackson</h4>
+    <ul>
+      <li>Up: "W"</li>
+      <li>Down: "S"</li>
+      <li>Left: A"</li>
+      <li>Right: "D"</li>
+    </ul>
   </body>
 </html>
