--- a/Snake.html
+++ b/Snake.html
@@ -18,7 +18,7 @@
     <h2 id="scoreLabel">Your score is: <h2>
     <h2 id="highLabel">Your Highscore is: <h2>
     <h4>Made By Jackson</h4>
-    <ul>
+    <ul style="list-style-type: none">
       <li>Up: "W"</li>
       <li>Down: "S"</li>
       <li>Left: A"</li>
