--- a/langton.html
+++ b/langton.html
@@ -13,9 +13,23 @@
         body{
           background: rgb(0, 0, 0);
         }
+        button {
+          background-color: red;
+          border: none;
+          color: white;
+          padding: 15px 32px;
+          text-align: center;
+          text-decoration: none;
+          display: inline-block;
+          font-size: 16px;
+          margin: 4px 2px;
+          cursor: pointer;
+        }
       </style>
-      <canvas id="canvas" width="640" height="420"></canvas>
-      <script type="text/javascript" src="ant.js"></script>
+      <canvas id="canvas" width="720" height="640"></canvas>
+      <script type="text/javascript" src="ant.js"></script><br>
+      <button type="button" id="resetBtn" onclick="redoGrid();">Reset</button><br>
+      <p>Speed Bar</p><input type="range" min="1" max="1000" step="10" id="speedBar" onchange="alert('Moved')">
     </center>
   </body>
 </html>
