--- a/langton.html
+++ b/langton.html
@@ -29,7 +29,7 @@
       <canvas id="canvas" width="720" height="640"></canvas>
       <script type="text/javascript" src="ant.js"></script><br>
       <button type="button" id="resetBtn" onclick="redoGrid();">Reset</button><br>
-      <p>Speed Bar</p><input type="range" min="1" max="1000" step="10" id="speedBar" onchange="alert('Moved')">
+      <p>Speed Bar</p><input type="range" min="1" max="200" step="1" id="speedBar" onchange="speedChange();">
     </center>
   </body>
 </html>
