--- a/GameOfLife.html
+++ b/GameOfLife.html
@@ -9,7 +9,9 @@
       <script type="text/javascript" src="life.js"></script>
       <canvas id="canvas" width="640" height="420"></canvas><br>
       <button type="button" id="playbtn" onclick="pause();" style="margin-bottom: 10px;">Play</button>
-      <input type="button" id="clearbtn" value="Clear" onclick="removeAll();"><br><!-- Currently doesn't work. I have no idea why. -->
+      <button type="button" id="clearbtn" onclick="removeAll();">Clear</button>
+      <button type="button" id="stepBtn" onclick="step();">Step</button>
+      <br>
       Change the Frames Per Second:
       <input type="text" id="speedBox" value="5">
       <input type="button" id="submitSpeed" value="Change Speed" onclick="changeSpeed();">
